--- a/mQ.csproj
+++ b/mQ.csproj
@@ -86,5 +86,6 @@
   <ItemGroup>
     <Content Include="images\logo.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
