--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 보고준비/20210913발표준비/시연자료/시연-5/2021-08-12 16-34-54.mkv
 *.mkv
+/hecBidding/상상진화/f0a93ff2894a9dfe26d8.mp4
