--- a/.gitignore
+++ b/.gitignore
@@ -374,3 +374,4 @@ FodyWeavers.xsd
 보고준비/202110컨퍼런스 준비/첨부 1. 컨퍼런스 발표양식_(오후세션 A4)_BIM기반 플랜트건축 EPC정보 플랫폼 구축_2021_1017_mk.pptx
 hecCalc/CCB(HEC Template).rvt
 *.rvt
+hecCalc/Final/set.zip
