--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,7 @@ FodyWeavers.xsd
 hecCalc/CCB(HEC Template).rvt
 *.rvt
 hecCalc/Final/set.zip
+DynamoCoreRuntime_2.12.0.5650/GPUCache/data_0
+DynamoCoreRuntime_2.12.0.5650/GPUCache/data_1
+DynamoCoreRuntime_2.12.0.5650/GPUCache/index
+DynamoCoreRuntime_2.12.0.5650/GPUCache/data_3
