--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,7 @@ DynamoCoreRuntime_2.12.0.5650/GPUCache/data_0
 DynamoCoreRuntime_2.12.0.5650/GPUCache/data_1
 DynamoCoreRuntime_2.12.0.5650/GPUCache/index
 DynamoCoreRuntime_2.12.0.5650/GPUCache/data_3
+DynamoCoreRuntime_2.12.0.5650/GPUCache/data_0
+DynamoCoreRuntime_2.12.0.5650/GPUCache/data_1
+DynamoCoreRuntime_2.12.0.5650/GPUCache/data_3
+DynamoCoreRuntime_2.12.0.5650/GPUCache/index
