--- a/.gitignore
+++ b/.gitignore
@@ -385,3 +385,7 @@ DynamoCoreRuntime_2.12.0.5650/GPUCache/data_3
 DynamoCoreRuntime_2.12.0.5650/GPUCache/index
 /DynamoCoreRuntime_2.12.0.5650
 /DynamoCoreRuntime_2.13.1.3887
+/_study/CljStudy/my-pjt/.clj-kondo
+/_study/CljStudy/my-pjt/.calva
+*.calva-repl
+*.calva-repl
