--- a/.gitignore
+++ b/.gitignore
@@ -389,3 +389,4 @@ DynamoCoreRuntime_2.12.0.5650/GPUCache/index
 /_study/CljStudy/my-pjt/.calva
 *.calva-repl
 *.calva-repl
+hecBidding/FINAL/HEC BIDDING.zip
