--- a/.gitignore
+++ b/.gitignore
@@ -390,3 +390,4 @@ DynamoCoreRuntime_2.12.0.5650/GPUCache/index
 *.calva-repl
 *.calva-repl
 hecBidding/FINAL/HEC BIDDING.zip
+hecBidding/FINAL/hec bid.zip
