--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,7 @@ hecBidding/FINAL/hec bid.zip
 /etc/테스트/Steel Family_2024_0614/build
 /etc/테스트/Steel Family_2024_0614/dist
 Dynamo Tool-Kit/devLab/\[HSD kit\]_하중분배 및 부재 해석_\[1.1.5\]_sample.dyn
+H_BimNote/백일장단문매크로용.pptx
+H_BimNote/백일장단문매크로용.pptx
+H_BimNote/백일장단문매크로용.pptx
+*.pptx
