--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,10 @@ H_BimNote/백일장단문매크로용.pptx
 H_BimNote/백일장단문매크로용.pptx
 *.pptx
 build
+H_BimNote/test/B-note.exe
+H_BimNote/test/B-note.exe
+H_BimNote/test/B-note.exe
+H_BimNote/dist/B-note.exe
+*.exe
+/H_BimNote/dist
+/H_BimNote/test
